texi2html/test/invalid/res/texi_ref_to_unknown_node/ref_to_unknown_node.texi
\input texinfo @c -*-texinfo-*-

@setfilename ref_to_unknown_node.info

@node Top
@top Ref to nonexisting node.

ref to a non existing node@ref{bidule}.

@bye
